Fix header align.

--- a/resources/style.css
+++ b/resources/style.css
@@ -7,24 +7,26 @@ html, body {
   text-align: center;
 }
 
-.header {
+header {
   display: flex;
-  flex-grow: 1;
   align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
 }
 .logo {
   display: flex;
-  flex-grow: 1;
+  /*flex-grow: 1;*/
 	align-items: center;
 }
 
 .logo img {
   height: 50px;
-  margin-left: 10px;
+  padding-left: 10px;
 }
 
 nav {
-  display: inline;
+  text-align: right;
+  flex-grow: 1;
 }
 
 nav p {
